ingress.yaml
apiVersion: networking.k8s.io/v1
kind: "Ingress"
metadata: 
  name: "bookrental-ingress"
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingressclass.kubernetes.io/is-default-class: "true"
spec: 
  ingressClassName: nginx
  rules: 
    - host: ""
      http: 
        paths: 
          - path: /books
            pathType: Prefix
            backend: 
              service:
                name: book
                port:
                  number: 8080
          - path: /rentals
            pathType: Prefix
            backend: 
              service:
                name: rental
                port:
                  number: 8080
          - path: /members
            pathType: Prefix
            backend: 
              service:
                name: member
                port:
                  number: 8080
          - path: /bookLists
            pathType: Prefix
            backend:
              service:
                name: view
                port:
                  number: 8080
