rentalservice-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rentalservice-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rentalservice
spec:
  hosts:
  - "*"
  gateways:
  - rentalservice-gateway
  http:
  - match:
    - uri:
        exact: /rental
    - uri:
        exact: /book
    - uri:
        exact: /member
    - uri:
        exact: /view
    route:
    - destination:
        host: book
        port:
          number: 8083
