vs-book.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-book-network-rule
spec:
  hosts:
    - book
  http:
    - route:
      - destination:
          host: book
      timeout: 0.1s
